# Langton-s-ant

./: README.md  ant.py  board.py  game.py  pyproject.toml  tile.py
langton-s-ant/: __init__.py  ant.py  board.py  cmd_line.py  game.py  main.py
