[tool.poetry]
name = "langton-s-ant"
version = "0.1.0"
description = ""
authors = ["Margot Lafond <margot.lafond@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.11"
mypy = "^1.15.0"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
